GitClientCloneTest: drop use of FileUtils.readFileToString() like in master branch